--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+axum = "0.8.3"
+chrono = "0.4.40"
+serde = "1.0.219"
+tokio = { version = "1", features = ["full"] }
 yahoo_finance_api = "3.0.0"
