--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,12 @@ edition = "2024"
 [dependencies]
 axum = "0.8.3"
 axum-cookie = "0.2.3"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+
+# Telemetry
+opentelemetry = "0.29.1"
+opentelemetry_sdk = "0.29.0"
+opentelemetry-otlp = "0.29.0"
+opentelemetry-stdout = "0.29.0"
+opentelemetry-appender-tracing = "0.29.1"
+tracing-opentelemetry = "0.30.0"
