--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ opentelemetry-otlp = "0.29.0"
 opentelemetry-stdout = "0.29.0"
 opentelemetry-appender-tracing = "0.29.1"
 tracing-opentelemetry = "0.30.0"
+tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
+tower = { version = "0.5.2", features = ["tracing"] }
+tower-http = { version = "0.6.2", features = ["fs", "trace", "tracing"] }
+tracing = "0.1.41"
