--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+axum = "0.8.3"
+sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
+tokio = { version = "1.44.2", features = ["rt-multi-thread", "tokio-macros"] }
