--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 axum = "0.8.3"
 chrono = "0.4.40"
+futures = "0.3.31"
 serde = "1.0.219"
 tokio = { version = "1", features = ["full"] }
 yahoo_finance_api = "3.0.0"
