--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ axum = "0.8.3"
 chrono = "0.4.40"
 futures = "0.3.31"
 serde = "1.0.219"
+time = "0.3.41"
 tokio = { version = "1", features = ["full"] }
 yahoo_finance_api = "3.0.0"
