login route skeliton

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,13 @@ edition = "2024"
 
 [dependencies]
 axum = "0.8.3"
-axum-cookie = "0.2.3"
+tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
+tower = { version = "0.5.2", features = ["tracing"] }
+tower-http = { version = "0.6.2", features = ["fs", "trace", "tracing"] }
+tower-cookies = "0.11.0"
+argon2 = { version = "0.5.3", features = ["std"] }
+serde = { version = "1.0.219", features = ["derive"] }
+tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 
 # Telemetry
@@ -15,7 +21,3 @@ opentelemetry-otlp = "0.29.0"
 opentelemetry-stdout = "0.29.0"
 opentelemetry-appender-tracing = "0.29.1"
 tracing-opentelemetry = "0.30.0"
-tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
-tower = { version = "0.5.2", features = ["tracing"] }
-tower-http = { version = "0.6.2", features = ["fs", "trace", "tracing"] }
-tracing = "0.1.41"
