--- a/services/gateway/Cargo.toml
+++ b/services/gateway/Cargo.toml
@@ -5,14 +5,15 @@ edition = "2024"
 
 [dependencies]
 axum.workspace = true
-tokio.workspace = true # = { version = "1.44.2", features = ["rt-multi-thread"] }
-tower.workspace = true # = { version = "0.5.2", features = ["tracing"] }
+tokio.workspace = true
+tower.workspace = true
 tower-http = { version = "0.6.2", features = ["fs", "trace", "tracing"] }
 tower-cookies = "0.11.0"
 reqwest = "0.12.15"
 hyper = "1.6.0"
 http-body-util = "0.1.3"
 telemetry = {path = "../../shared/telemetry"}
+shared_utils = {path = "../../shared/shared_utils"}
 
 [dev-dependencies]
 anyhow = "1.0.98"
