--- a/shared/shared_utils/Cargo.toml
+++ b/shared/shared_utils/Cargo.toml
@@ -1,12 +1,7 @@
 [package]
-name = "utils"
+name = "shared_utils"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-opentelemetry = "0.29.1"
-opentelemetry_sdk = "0.29.0"
-opentelemetry-otlp = "0.29.0"
-opentelemetry-stdout = "0.29.0"
-opentelemetry-appender-tracing = "0.29.1"
-tracing-opentelemetry = "0.30.0"
+axum.workspace = true
