added trending stocks endpoint

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,41 +1,53 @@
 services:
-     redis:
-        image: redis
-        expose:
-           - "6379"
-        networks:
-           - backend
-        healthcheck:
-           test: ["CMD", "redis-cli", "ping"]
-           interval: 5s
-           timeout: 2s
-           retries: 5
-     auth:
-        build:
-           context: .
-           dockerfile: services/auth_service/Dockerfile.dev
+  redis:
+    image: redis
+    expose:
+      - "6379"
+    networks:
+      - backend
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 2s
+      retries: 5
+    auth:
+      build:
+        context: .
+        dockerfile: services/auth_service/Dockerfile.dev
         volumes:
-           - .:/app
-           - /app/target
+          - .:/app
+          - /app/target
         expose:
-           - "4002"
+          - "4002"
         networks:
-           - backend
+          - backend
         depends_on:
-           redis:
-              condition: service_healthy
-     gateway:
-        build:
-           context: .
-           dockerfile: services/gateway/Dockerfile.dev
+          redis:
+            condition: service_healthy
+    gateway:
+      build:
+        context: .
+        dockerfile: services/gateway/Dockerfile.dev
         volumes:
-           - .:/app
-           - /app/target
+          - .:/app
+          - /app/target
         ports:
-           - "4001:4001"
+          - "4001:4001"
         networks:
-           - backend
+          - backend
+
+    stocks_api_service:
+      build:
+        context: .
+        dockerfile: services/stocks_api_service/Dockerfile.dev
+        volumes:
+          - .:/app
+          - /app/target
+        ports:
+          - "4003:4003"
+        networks:
+          - backend
 
 networks:
-     backend:
-        driver: bridge
+  backend:
+    driver: bridge
