--- a/services/stocks_api_service/Cargo.toml
+++ b/services/stocks_api_service/Cargo.toml
@@ -13,3 +13,7 @@ futures = "0.3.31"
 time = "0.3.41"
 yahoo_finance_api = "3.0.0"
 telemetry = {path = "../../shared/telemetry"}
+reqwest = "0.12.15"
+serde_json = "1.0.140"
+moka = { version = "0.12.10", features = ["sync"] }
+once_cell = "1.21.3"
