--- a/shared/telemetry/Cargo.toml
+++ b/shared/telemetry/Cargo.toml
@@ -4,10 +4,14 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-opentelemetry = "0.29.1"
-opentelemetry_sdk = "0.29.0"
+tower.workspace = true
+axum.workspace = true
+tracing.workspace = true
+opentelemetry = { version = "0.29.1", features = ["trace", "logs"] }
+opentelemetry_sdk = { version = "0.29.0", features = ["logs"] }
 opentelemetry-otlp = "0.29.0"
+opentelemetry-http = "0.29.0"
 opentelemetry-stdout = "0.29.0"
 opentelemetry-appender-tracing = "0.29.1"
 tracing-opentelemetry = "0.30.0"
-tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "registry", "json"] }
