--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -10,6 +10,20 @@ services:
            interval: 5s
            timeout: 2s
            retries: 5
+     db:
+        image: postgres
+        expose:
+           - "5432"
+        environment:
+           POSTGRES_PASSWORD: password
+           POSTGRES_DB: dev_db
+        networks:
+           - backend
+      #   healthcheck:
+      #      test: ["CMD", "redis-cli", "ping"]
+      #      interval: 5s
+      #      timeout: 2s
+      #      retries: 5
      auth:
         build:
            context: .
