--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,14 +26,14 @@ image: "rust:latest"
 #   - apt-get install -yqq --no-install-recommends build-essential
 
 # Use cargo to test the project
-test:cargo:
-  script:
-    - rustc --version && cargo --version
-    - cargo run &
-    - SERVER_PID=$!
-    - sleep 5
-    - cargo test --workspace --verbose
-    - kill $SERVER_PID || true
+# test:cargo:
+#   script:
+#     - rustc --version && cargo --version
+#     - cargo run &
+#     - SERVER_PID=$!
+#     - sleep 5
+#     - cargo test --workspace --verbose
+#     - kill $SERVER_PID || true
 
 # Optional: Use a third party library to generate gitlab junit reports
 # test:junit-report:
