--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,10 +1,12 @@
 services:
      redis:
         image: redis
+        env_file: ".env"
         expose:
            - "6379"
         networks:
            - backend
+        command: redis-server --requirepass ${REDIS_PASSWORD}
         healthcheck:
            test: ["CMD", "redis-cli", "ping"]
            interval: 5s
@@ -14,6 +16,7 @@ services:
         build:
            context: .
            dockerfile: services/auth_service/Dockerfile.dev
+        env_file: ".env"
         volumes:
            - .:/app
            - /app/target
