--- a/services/auth_service/Cargo.toml
+++ b/services/auth_service/Cargo.toml
@@ -15,3 +15,5 @@ argon2 = { version = "0.5.3", features = ["std"] }
 serde = { version = "1.0.219", features = ["derive"] }
 redis = { version = "0.29.5", features = ["tokio-comp"] }
 telemetry = {path = "../../shared/telemetry"}
+shared_utils = {path = "../../shared/shared_utils"}
+config = "0.15.11"
