--- a/services/stocks_api_service/Cargo.toml
+++ b/services/stocks_api_service/Cargo.toml
@@ -17,3 +17,4 @@ reqwest = "0.12.15"
 serde_json = "1.0.140"
 moka = { version = "0.12.10", features = ["sync"] }
 once_cell = "1.21.3"
+tower-http = { version = "0.6.2", features = ["trace", "tracing"] }
