--- a/services/auth_service/Cargo.toml
+++ b/services/auth_service/Cargo.toml
@@ -16,3 +16,6 @@ serde = { version = "1.0.219", features = ["derive"] }
 redis = { version = "0.29.5", features = ["tokio-comp"] }
 telemetry = {path = "../../shared/telemetry"}
 jsonwebtoken = "9.3.1"
+chrono = "0.4"
+uuid = { version = "1.0", features = ["v4"] }
+serde = { version = "1.0", features = ["derive"] }
