--- a/services/auth_service/Cargo.toml
+++ b/services/auth_service/Cargo.toml
@@ -17,3 +17,5 @@ redis = { version = "0.29.5", features = ["tokio-comp"] }
 telemetry = {path = "../../shared/telemetry"}
 shared_utils = {path = "../../shared/shared_utils"}
 config = "0.15.11"
+oauth2 = "5.0.0"
+reqwest = { version = "0.12.15", features = ["json"] }
