--- a/services/stocks_api_service/Cargo.toml
+++ b/services/stocks_api_service/Cargo.toml
@@ -14,4 +14,4 @@ serde_json = "1.0.140"
 time = "0.3.41"
 yahoo_finance_api = "3.0.0"
 futures = "0.3.31"
-tower-http = { version = "0.6.2", features = ["trace", "tracing"] }
+tower-http = { version = "0.6.2", features = ["trace", "tracing", "cors"] }
