--- a/services/gateway/Cargo.toml
+++ b/services/gateway/Cargo.toml
@@ -16,6 +16,8 @@ hyper = "1.6.0"
 http-body-util = "0.1.3"
 telemetry = {path = "../../shared/telemetry"}
 shared_utils = {path = "../../shared/shared_utils"}
+serde = { version = "1.0.219", features = ["derive"] }
+jsonwebtoken = "9.3.1"
 
 [dev-dependencies]
 anyhow = "1.0.98"
