--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -82,6 +82,21 @@ services:
     networks:
       - backend
 
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.dev
+    env_file: ".env"
+    environment:
+      - HOKIDAR_USEPOLLING=true
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    expose:
+      - "5173"
+    networks:
+      - backend
+
 networks:
   backend:
     driver: bridge
