--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -59,6 +59,22 @@ services:
     networks:
       - backend
 
+  user:
+    build:
+      context: .
+      dockerfile: services/user_service/Dockerfile.dev
+    env_file: ".env"
+    volumes:
+      - .:/app
+      - /app/target
+    expose:
+      - "4004"
+    networks:
+      - backend
+    depends_on:
+      db:
+        condition: service_healthy   
+
   lgtm:
     image: grafana/otel-lgtm
     expose:
