--- a/services/user_service/Cargo.toml
+++ b/services/user_service/Cargo.toml
@@ -16,3 +16,4 @@ tokio.workspace = true
 tracing.workspace = true
 telemetry = {path = "../../shared/telemetry"}
 serde = { version = "1.0.219", features = ["derive"] }
+config = "0.15.11"
