--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -61,6 +61,9 @@ services:
 
   lgtm:
     image: grafana/otel-lgtm
+    environment:
+      - GF_SECURITY_ALLOW_EMBEDDING=true
+      - GF_SECURITY_COOKIE_SAMESITE=none
     expose:
       - "4317"
       - "4318"
