--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "dotenv": "^16.5.0",
+    "jwt-decode": "^4.0.0",
     "lightweight-charts": "^5.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
