--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,27 @@
 services:
-    db:
-        image: postgres
-        ports:
-           - "5432:5432"
-        environment:
-           POSTGRES_PASSWORD: password
-           POSTGRES_DB: dev_db
+  user:
+    build:
+      context: .
+      dockerfile: services/user_service/Dockerfile.dev
+    env_file: ".env"
+    volumes:
+      - .:/app
+      - /app/target
+    expose:
+      - "4004"
+    networks:
+      - backend
+ 
+  auth:
+    build:
+      context: .
+      dockerfile: services/auth_service/Dockerfile.dev
+    env_file: ".env"
+    volumes:
+      - .:/app
+      - /app/target
+    expose:
+      - "4002"
+    networks:
+      - backend
+     
