--- a/services/user_service/Cargo.toml
+++ b/services/user_service/Cargo.toml
@@ -6,14 +6,16 @@ edition = "2024"
 
 [dependencies]
 rust_decimal = { version = "1.37.1", features = ["macros"] }
-chrono = "0.4.41"
+chrono = { version = "0.4.41", features = ["serde"] }
 sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio", "rust_decimal", "uuid"] }
-uuid = "1.16.0"
+uuid = { version = "1.16.0", features = ["v4", "serde"] }
 shared_utils = {path = "../../shared/shared_utils"}
 _dev_utils = {path = "../../shared/_dev_utils"}
 axum.workspace = true
 tokio.workspace = true
 tracing.workspace = true
+tower-http = { version = "0.6.2", features = ["trace", "tracing"] }
 telemetry = {path = "../../shared/telemetry"}
 serde = { version = "1.0.219", features = ["derive"] }
 config = "0.15.11"
+reqwest = { version = "0.12.15", features = ["json"] }
