--- a/services/stocks_api_service/Cargo.toml
+++ b/services/stocks_api_service/Cargo.toml
@@ -15,3 +15,4 @@ time = "0.3.41"
 yahoo_finance_api = "3.0.0"
 futures = "0.3.31"
 tower-http = { version = "0.6.2", features = ["trace", "tracing", "cors"] }
+surf = "2.3.2"
