--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -34,8 +34,11 @@ services:
       dockerfile: services/auth_service/Dockerfile.dev
     env_file: ".env"
     volumes:
-      - .:/app
-      - /app/target
+      - ./shared/:/app/shared
+      - ./Cargo.toml:/app/Cargo.toml
+      - ./Cargo.lock:/app/Cargo.lock
+      - target_cache:/app/target
+      - ./services/auth_service/:/app/services/auth_service
     expose:
       - "4002"
     networks:
@@ -52,8 +55,11 @@ services:
       dockerfile: services/gateway/Dockerfile.dev
     env_file: ".env"
     volumes:
-      - .:/app
-      - /app/target
+      - ./services/gateway/:/app/services/gateway
+      - ./shared/:/app/shared
+      - ./Cargo.toml:/app/Cargo.toml
+      - ./Cargo.lock:/app/Cargo.lock
+      - target_cache:/app/target
     ports:
       - "4001:4001"
     networks:
@@ -69,6 +75,9 @@ services:
       - "4318"
     ports:
       - "3000:3000"
+    volumes:
+      - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+      - ./grafana/dashboards:/etc/grafana/dashboards
     networks:
       - backend
 
@@ -78,8 +87,11 @@ services:
       dockerfile: services/stocks_api_service/Dockerfile.dev
     env_file: ".env"
     volumes:
-      - .:/app
-      - /app/target
+      - ./services/stocks_api_service/:/app/services/stocks_api_service
+      - ./shared/:/app/shared
+      - ./Cargo.toml:/app/Cargo.toml
+      - ./Cargo.lock:/app/Cargo.lock
+      - target_cache:/app/target
     expose:
       - "4003"
     networks:
@@ -100,6 +112,10 @@ services:
     networks:
       - backend
 
+
 networks:
   backend:
     driver: bridge
+
+volumes:
+  target_cache:
