--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,2 +1,72 @@
 services:
-    
+  gateway:
+    build:
+      context: .
+      dockerfile: services/gateway/Dockerfile.dev
+    env_file: ".env"
+    volumes:
+      - ./shared/:/app/shared
+      - ./Cargo.toml/:/app/Cargo.toml
+      - ./Cargo.lock/:/app/Cargo.lock
+      - ./services/gateway/:/app/services/gateway
+      - target_cache:/app/target
+    ports:
+      - "4001:4001"
+    networks:
+      - backend
+
+  redis:
+    image: redis
+    env_file: ".env"
+    expose:
+      - "6379"
+    networks:
+      - backend
+    command: redis-server --requirepass ${REDIS_PASSWORD}
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 2s
+      retries: 5
+
+  db:
+    image: postgres
+    env_file: ".env"
+    expose:
+      - "5432"
+    volumes:
+      - ./sql/init_db.sql:/docker-entrypoint-initdb.d/init_db.sql
+    networks:
+      - backend
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d dev_db"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+
+  auth:
+    build:
+      context: .
+      dockerfile: services/auth_service/Dockerfile.dev
+    env_file: ".env"
+    expose:
+      - "4002"
+    volumes:
+      - ./shared/:/app/shared
+      - ./Cargo.toml/:/app/Cargo.toml
+      - ./Cargo.lock/:/app/Cargo.lock
+      - ./services/auth_service/:/app/services/auth_service
+      - target_cache:/app/target
+    networks:
+      - backend
+    depends_on:
+      redis:
+        condition: service_healthy
+      db:
+        condition: service_healthy
+
+networks:
+  backend:
+    driver: bridge
+volumes:
+  target_cache:
