--- a/services/gateway/Dockerfile.dev
+++ b/services/gateway/Dockerfile.dev
@@ -4,7 +4,12 @@ RUN cargo install watchexec-cli
 
 WORKDIR /app
 
-COPY . .
+COPY Cargo.toml Cargo.lock ./
+COPY shared/ shared/
+
+COPY services/ services/
+
+RUN cargo build -p gateway
 
 WORKDIR /app/services/gateway
 
