--- a/grafana/provisioning/dashboards/dashboards.yaml
+++ b/grafana/provisioning/dashboards/dashboards.yaml
@@ -1,13 +1,10 @@
-# grafana/provisioning/dashboards/dashboards.yaml
 apiVersion: 1
-
 providers:
   - name: 'default'
     orgId: 1
     folder: ''
     type: file
     disableDeletion: false
-    editable: true
+    updateIntervalSeconds: 30
     options:
-      path: /etc/grafana/dashboards
-
+      path: /var/lib/grafana/dashboards
