--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,33 +1,23 @@
 services:
-  user:
-    build:
-      context: .
-      dockerfile: services/user_service/Dockerfile.dev
-    env_file: ".env"
-    volumes:
-      - ./services/user_service/:/app/services/user_service
-      - ./shared/:/app/shared
-      - ./Cargo.toml:/app/Cargo.toml
-      - ./Cargo.lock:/app/Cargo.lock
-      - target_cache:/app/target
+  lgtm:
+    image: grafana/otel-lgtm
+    environment:
+      - GF_SECURITY_ALLOW_EMBEDDING=true
+      - GF_SECURITY_COOKIE_SAMESITE=none
+      - GF_SERVER_ROOT_URL=/auth/grafana/
+      - GF_SERVER_SERVE_FROM_SUB_PATH=true
     expose:
-      - "4004"
-    networks:
-      - backend
-
-  gateway:
-    build:
-      context: .
-      dockerfile: services/gateway/Dockerfile.dev
-    env_file: ".env"
-    volumes:
-      - ./shared/:/app/shared
-      - ./Cargo.toml/:/app/Cargo.toml
-      - ./Cargo.lock/:/app/Cargo.lock
-      - ./services/gateway/:/app/services/gateway
-      - target_cache:/app/target
+      - "4317"
+      - "4318"
     ports:
-      - "4001:4001"
+      - "3000:3000"
+    volumes:
+      - ./grafana/dashboards:/var/lib/grafana/dashboards
+      - ./grafana/provisioning/dashboards:/otel-lgtm/grafana/conf/provisioning/dashboards
+      - grafana_data:/var/lib/grafana
+      - loki_data:/var/lib/loki
+      - tempo_data:/var/lib/tempo
+      - prometheus_data:/prometheus
     networks:
       - backend
 
@@ -36,6 +26,8 @@ services:
     env_file: ".env"
     expose:
       - "6379"
+    volumes:
+      - redisdata:/data
     networks:
       - backend
     command: redis-server --requirepass ${REDIS_PASSWORD}
@@ -52,6 +44,7 @@ services:
       - "5432"
     volumes:
       - ./sql/init_db.sql:/docker-entrypoint-initdb.d/init_db.sql
+      - pgdata:/var/lib/postgresql/data
     networks:
       - backend
     healthcheck:
@@ -63,16 +56,10 @@ services:
   auth:
     build:
       context: .
-      dockerfile: services/auth_service/Dockerfile.dev
+      dockerfile: services/auth_service/Dockerfile
     env_file: ".env"
     expose:
       - "4002"
-    volumes:
-      - ./shared/:/app/shared
-      - ./Cargo.toml/:/app/Cargo.toml
-      - ./Cargo.lock/:/app/Cargo.lock
-      - ./services/auth_service/:/app/services/auth_service
-      - target_cache:/app/target
     networks:
       - backend
     depends_on:
@@ -81,8 +68,51 @@ services:
       db:
         condition: service_healthy
 
+  gateway:
+    build:
+      context: .
+      dockerfile: services/gateway/Dockerfile
+    env_file: ".env"
+    volumes:
+      - ./view:/app/view
+    environment:
+      - DEV=false
+    ports:
+      - "4001:4001"
+    networks:
+      - backend
+
+  user:
+    build:
+      context: .
+      dockerfile: services/user_service/Dockerfile
+    env_file: ".env"
+    expose:
+      - "4004"
+    networks:
+      - backend
+    depends_on:
+      db:
+        condition: service_healthy
+
+  stocks_api_service:
+    build:
+      context: .
+      dockerfile: services/stocks_api_service/Dockerfile
+    env_file: ".env"
+    expose:
+      - "4003"
+    networks:
+      - backend
+
 networks:
   backend:
     driver: bridge
+
 volumes:
-  target_cache:
+  pgdata: {}
+  redisdata: {}
+  grafana_data: {}
+  loki_data: {}
+  tempo_data: {}
+  prometheus_data: {}
