--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,13 @@ members = [
 	"services/user_service"
 ]
 
+[profile.release]
+opt-level = "z"
+lto = true
+codegen-units = 1
+debug = false
+panic = "abort"
+
 [workspace.dependencies]
 axum = "0.8.3"
 tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
