--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,10 @@
     "dotenv": "^16.5.0",
     "lightweight-charts": "^5.0.6",
     "react": "^19.0.0",
-    "react-icons": "^5.5.0",
+    "react-apexcharts": "^1.7.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
